// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Movie Card Expanded 1`] = `
<li
  className="MuiGridListTile-root-241"
>
  <div
    className="MuiGridListTile-tile-242"
  >
    <div
      className="MuiPaper-root-246 MuiPaper-elevation1-249 MuiPaper-rounded-247 MuiCard-root-245 MovieCard-card-235"
    >
      <div
        className="MuiCardHeader-root-273"
      >
        <div
          className="MuiCardHeader-avatar-274"
        >
          <div
            aria-label="Movie"
            className="MuiAvatar-root-279 MuiAvatar-colorDefault-280 MovieCard-avatar-240"
          >
            M
          </div>
        </div>
        <div
          className="MuiCardHeader-content-276"
        >
          <span
            className="MuiTypography-root-282 MuiTypography-body2-290 MuiCardHeader-title-277"
          >
            Die Hard
          </span>
          <span
            className="MuiTypography-root-282 MuiTypography-body2-290 MuiTypography-colorTextSecondary-315 MuiCardHeader-subheader-278"
          >
            jan 21 2019
          </span>
        </div>
      </div>
      <div
        className="MuiCardMedia-root-318 MovieCard-media-236"
        style={
          Object {
            "backgroundImage": "url(\\"https://image.tmdb.org/t/p/original/mc7MubOLcIw3MDvnuQFrO9psfCa.jpg\\")",
          }
        }
        title="Die Hard"
      />
      <div
        className="MuiCardActions-root-320 MuiCardActions-disableActionSpacing-321 MovieCard-actions-237"
      >
        <p
          className="MuiTypography-root-282 MuiTypography-body1-291 MuiTypography-paragraph-310"
        >
          Overview
        </p>
        <button
          aria-expanded={true}
          aria-label="Show more"
          className="MuiButtonBase-root-329 MuiIconButton-root-323 MovieCard-expand-238 MovieCard-expandOpen-239"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-328"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-332"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-346"
          />
        </button>
      </div>
      <div
        className="MuiCollapse-container-341 MuiCollapse-entered-342"
        style={
          Object {
            "minHeight": "0px",
          }
        }
      >
        <div
          className="MuiCollapse-wrapper-343"
        >
          <div
            className="MuiCollapse-wrapperInner-344"
          >
            <div
              className="MuiCardContent-root-345"
            >
              <p
                className="MuiTypography-root-282 MuiTypography-body1-291 MuiTypography-paragraph-310"
              >
                NYPD cop John McClane's plan to reconcile with his 
estranged wife is thrown for a serious loop when, minutes after he arrives 
at her office, the entire building is overtaken by a group of terrorists. 
With little help from the LAPD, wisecracking McClane sets out to single-handedly 
rescue the hostages and bring the bad guys down.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</li>
`;

exports[`Storyshots Movie Card With Title 1`] = `
<li
  className="MuiGridListTile-root-7"
>
  <div
    className="MuiGridListTile-tile-8"
  >
    <div
      className="MuiPaper-root-12 MuiPaper-elevation1-15 MuiPaper-rounded-13 MuiCard-root-11 MovieCard-card-1"
    >
      <div
        className="MuiCardHeader-root-39"
      >
        <div
          className="MuiCardHeader-avatar-40"
        >
          <div
            aria-label="Movie"
            className="MuiAvatar-root-45 MuiAvatar-colorDefault-46 MovieCard-avatar-6"
          >
            M
          </div>
        </div>
        <div
          className="MuiCardHeader-content-42"
        >
          <span
            className="MuiTypography-root-48 MuiTypography-body2-56 MuiCardHeader-title-43"
          >
            Die Hard
          </span>
          <span
            className="MuiTypography-root-48 MuiTypography-body2-56 MuiTypography-colorTextSecondary-81 MuiCardHeader-subheader-44"
          >
            jan 21 2019
          </span>
        </div>
      </div>
      <div
        className="MuiCardMedia-root-84 MovieCard-media-2"
        title="Die Hard"
      />
      <div
        className="MuiCardActions-root-86 MuiCardActions-disableActionSpacing-87 MovieCard-actions-3"
      >
        <p
          className="MuiTypography-root-48 MuiTypography-body1-57 MuiTypography-paragraph-76"
        >
          Overview
        </p>
        <button
          aria-label="Show more"
          className="MuiButtonBase-root-95 MuiIconButton-root-89 MovieCard-expand-4"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-94"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-98"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-111"
          />
        </button>
      </div>
    </div>
  </div>
</li>
`;

exports[`Storyshots Movie Card With img 1`] = `
<li
  className="MuiGridListTile-root-124"
>
  <div
    className="MuiGridListTile-tile-125"
  >
    <div
      className="MuiPaper-root-129 MuiPaper-elevation1-132 MuiPaper-rounded-130 MuiCard-root-128 MovieCard-card-118"
    >
      <div
        className="MuiCardHeader-root-156"
      >
        <div
          className="MuiCardHeader-avatar-157"
        >
          <div
            aria-label="Movie"
            className="MuiAvatar-root-162 MuiAvatar-colorDefault-163 MovieCard-avatar-123"
          >
            M
          </div>
        </div>
        <div
          className="MuiCardHeader-content-159"
        >
          <span
            className="MuiTypography-root-165 MuiTypography-body2-173 MuiCardHeader-title-160"
          >
            Die Hard
          </span>
          <span
            className="MuiTypography-root-165 MuiTypography-body2-173 MuiTypography-colorTextSecondary-198 MuiCardHeader-subheader-161"
          >
            jan 21 2019
          </span>
        </div>
      </div>
      <div
        className="MuiCardMedia-root-201 MovieCard-media-119"
        style={
          Object {
            "backgroundImage": "url(\\"https://image.tmdb.org/t/p/original/mc7MubOLcIw3MDvnuQFrO9psfCa.jpg\\")",
          }
        }
        title="Die Hard"
      />
      <div
        className="MuiCardActions-root-203 MuiCardActions-disableActionSpacing-204 MovieCard-actions-120"
      >
        <p
          className="MuiTypography-root-165 MuiTypography-body1-174 MuiTypography-paragraph-193"
        >
          Overview
        </p>
        <button
          aria-label="Show more"
          className="MuiButtonBase-root-212 MuiIconButton-root-206 MovieCard-expand-121"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-211"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-215"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-228"
          />
        </button>
      </div>
    </div>
  </div>
</li>
`;

exports[`Storyshots Search App Bar Default 1`] = `
<div
  className="SearchAppBar-root-353"
>
  <header
    className="MuiPaper-root-369 MuiPaper-elevation4-375 MuiAppBar-root-360 MuiAppBar-positionStatic-364 MuiAppBar-colorPrimary-367 SearchAppBar-root-353"
  >
    <div
      className="MuiToolbar-root-396 MuiToolbar-regular-398 MuiToolbar-gutters-397"
    >
      <h5
        className="MuiTypography-root-400 MuiTypography-h5-416 MuiTypography-colorInherit-429 SearchAppBar-grow-354"
      />
    </div>
  </header>
</div>
`;

exports[`Storyshots Search App Bar With Title 1`] = `
<div
  className="SearchAppBar-root-436"
>
  <header
    className="MuiPaper-root-452 MuiPaper-elevation4-458 MuiAppBar-root-443 MuiAppBar-positionStatic-447 MuiAppBar-colorPrimary-450 SearchAppBar-root-436"
  >
    <div
      className="MuiToolbar-root-479 MuiToolbar-regular-481 MuiToolbar-gutters-480"
    >
      <h5
        className="MuiTypography-root-483 MuiTypography-h5-499 MuiTypography-colorInherit-512 SearchAppBar-grow-437"
      >
        Movies for Sean!!
      </h5>
    </div>
  </header>
</div>
`;

exports[`Storyshots Search App Bar With children 1`] = `
<div
  className="SearchAppBar-root-519"
>
  <header
    className="MuiPaper-root-535 MuiPaper-elevation4-541 MuiAppBar-root-526 MuiAppBar-positionStatic-530 MuiAppBar-colorPrimary-533 SearchAppBar-root-519"
  >
    <div
      className="MuiToolbar-root-562 MuiToolbar-regular-564 MuiToolbar-gutters-563"
    >
      <h5
        className="MuiTypography-root-566 MuiTypography-h5-582 MuiTypography-colorInherit-595 SearchAppBar-grow-520"
      />
      <div>
        I'm a child node!!
      </div>
    </div>
  </header>
</div>
`;

exports[`Storyshots Search Box Default 1`] = `
<div>
  <div
    className="MuiGrid-container-606 MuiGrid-spacing-xs-8-628 MuiGrid-align-items-xs-flex-end-616"
  >
    <div
      className="MuiGrid-item-607"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-search fa-w-16 "
        data-icon="search"
        data-prefix="fas"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="MuiGrid-item-607"
    >
      <div
        className="MuiFormControl-root-703"
      >
        <label
          className="MuiFormLabel-root-718 MuiInputLabel-root-707 MuiInputLabel-formControl-712 MuiInputLabel-animated-715"
          data-shrink={false}
          htmlFor="movie-title-input"
        >
          Enter your movie title
        </label>
        <div
          className="MuiInputBase-root-738 MuiInput-root-725 MuiInput-underline-729 MuiInputBase-formControl-739 MuiInput-formControl-726"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            className="MuiInputBase-input-748 MuiInput-input-733"
            disabled={false}
            id="movie-title-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
